--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Generate GitHub Stats
 
 on:
   schedule:
-    - cron: '0 * * * *'
+    - cron: '0 0 * * *'
   workflow_dispatch:
 
 permissions:
@@ -11,6 +11,7 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v3
 
@@ -24,18 +25,16 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Generate stats cards
+      - name: Generate Developer Dashboard
         env:
           GITHUB_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
-          THEME_NAME: merko
-        run: python main.py Domisnnet
+        run: python main.py Domisnnet merko
 
-      - name: Commitar e Fazer Push dos Novos SVGs
+      - name: Commitar e Fazer Push do SVG
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: 'bot: Atualiza SVG dos Stats e Linguagens (Barra Premium)'
+          commit_message: 'bot: Atualiza Developer Dashboard SVG'
           files: |
-            github-stats.svg
-            top-langs.svg
+            dashboard.svg
           commit_user_name: 'github-actions[bot]'
           commit_user_email: '41898282+github-actions[bot]@users.noreply.github.com'
