--- a/firebase.json
+++ b/firebase.json
@@ -4,24 +4,16 @@
     "rewrites": [
       {
         "source": "/api/**",
-        "function": "getItems"
+        "function": "statsSvg"
       }
     ]
   },
-  "functions": [
-    {
-      "codebase": "default",
+  "functions": {
       "source": "functions",
-      "runtime": "python313",
-      "ignore": [
-        "venv",
-        ".git",
-        "firebase-debug.log",
-        "firebase-debug.*.log",
-        "*.local"
+      "predeploy": [
+        "pip install -r requirements.txt"
       ]
-    }
-  ],
+  },
   "emulators": {
     "hosting": {
       "host": "127.0.0.1",
