--- a/firebase.json
+++ b/firebase.json
@@ -9,10 +9,8 @@
     ]
   },
   "functions": {
-      "source": "functions",
-      "predeploy": [
-        "pip install -r requirements.txt"
-      ]
+    "source": "functions",
+    "runtime": "python311"
   },
   "emulators": {
     "hosting": {
